--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
 
 
   <!--pocetak-->
-
+  <div class="container mt-5">
+    <h1 class="francois-one-regular">Kako do <u>vozačke</u> dozvole?</h1>
+  </div>
   <div id="content" class="d-flex justify-content-center">
     <section id="roadmap" class="sectionwrapper mt-5 sectionroadmap new2023">
     <div class="container-fluid">
@@ -223,7 +225,7 @@
     <div class="container py-5">
       <div class="row">
           <div class="col-md-6 text" data-aos="fade-right">
-              <h2 class="as-font text-center">Kako do nas?</h2>
+            <h2 class="h1 francois-one-regular">Kako do nas?</h1>
               <p class="as-font-light">
                 Nalazimo se na Novom Beogradu, u ulici Bulevara Mihaila Pupina 165a, smešteni u zgradi Jugoagenta, na 2. spratu. Na istoj lokaciji, održavaju se teorijski časovi, kao i teorisjki ispiti za obe kategorije.
               </p>
