--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <img src="assets/img/slider3.jpg" class="d-block w-100" alt="Slider 1">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/img/slider2.jpg" class="d-block w-100" alt="Slider 2">
+            <img src="assets/img/slider3.jpg" class="d-block w-100" alt="Slider 2">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -146,7 +146,7 @@
 
   <!--pocetak-->
   <div class="container mt-5">
-    <h1 class="francois-one-regular" data-aos="fade-top">Kako do <u>vozačke</u> dozvole?</h1>
+    <h1 class="francois-one-regular" data-aos="fade-top">Kako do vozačke dozvole?</h1>
   </div>
   <div id="content" class="d-flex justify-content-center">
     <section id="roadmap" class="sectionwrapper mt-5 sectionroadmap new2023">
@@ -252,7 +252,7 @@
             <div class="col-12 col-sm-8 col-lg-6">
                 <!-- Section Heading-->
                 <div class="section_heading text-center wow fadeInUp" data-wow-delay="0.2s">
-                    <h3><span class="sub-color">Često </span> Postavljena Pitanja</h3>
+                    <h3>Često Postavljena <span class="sub-color">Pitanja</span></h3>
                     <p>Ovde možete pronaći odgovore na svoja pitanja</p>
                     <div class="line"></div>
                 </div>
