--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="content-area">
               <h4>Upis</h4>
               <div data-pm-slice="0 1 []" data-en-clipboard="true">Potrebno je da kandidat donese svoju ličnu kartu.</div>
-              <a href="#" class="cta-type-link text-dark" target="_self">Saznaj više o <span class="sub-color">upisu</span><i class="bi bi-link-45deg"></i></a>                                                                                </div>
+              <a href="#" class="cta-type-link sub-color" target="_self">Saznaj više<i class="bi bi-link-45deg"></i></a>                                                                                </div>
       </div>
       <div class="road-area road-1"></div>
           <div class="single-map-block card-2" data-aos="fade-right">
@@ -167,6 +167,7 @@
           <div class="content-area">
               <h4>Teorisjka obuka</h4>
               <div data-pm-slice="1 1 []" data-en-clipboard="true">Teorijska nastava traje 40 časova</div>
+              <a href="#" class="cta-type-link sub-color" target="_self">Saznaj više<i class="bi bi-link-45deg"></i></a>       
               </div>
       </div>
       <div class="road-area road-2"></div>
@@ -177,6 +178,7 @@
           <div class="content-area">
               <h4>Teorijski ispit</h4>
               <div data-pm-slice="1 1 []" data-en-clipboard="true">Položen teorijski ispit važi godinu i po dana.</div>
+              <a href="#" class="cta-type-link sub-color" target="_self">Saznaj više<i class="bi bi-link-45deg"></i></a>       
                </div>
       </div>
       <div class="road-area road-3"></div>
@@ -187,7 +189,8 @@
           <div class="content-area">
               <h4>Praktična obuka</h4>
               <div data-pm-slice="1 1 []" data-en-clipboard="true">Praktična obuka se sastoji od 40 časova</div>
-                                                                      <div class="app-btns"><a href=""></a><a href=""></a></div>                        </div>
+              <a href="#" class="cta-type-link sub-color" target="_self">Saznaj više<i class="bi bi-link-45deg"></i></a>
+              </div>
       </div>
       <div class="road-area road-4"></div>
       <div class="single-map-block card-5" data-aos="fade-right">
@@ -197,7 +200,7 @@
         <div class="content-area">
             <h4> Praktični ispit</h4>
             <div data-pm-slice="1 1 []" data-en-clipboard="true">Ceo ispit se sastoji se iz poligonskih radnji i vožnje u saobraćaju.</div>
-                                                              </div>
+            <a href="#" class="cta-type-link sub-color" target="_self">Saznaj više<i class="bi bi-link-45deg"></i></a>       </div>
       </div>
       <div class="road-area road-5"></div>
       <div class="single-map-block card-6" data-aos="fade-right">
@@ -207,7 +210,7 @@
         <div class="content-area">
             <h4>Probna vozačka dozvola</h4>
             <div data-pm-slice="1 1 []" data-en-clipboard="true">Za starije od 21 godine, probna vozačka dozvola traje 2 godine.</div>
-                                                                    <div class="app-btns"><a href=""></a><a href=""></a></div>                        </div>
+            <a href="#" class="cta-type-link sub-color" target="_self">Saznaj više<i class="bi bi-link-45deg"></i></a></div>
       </div>
       <div class="road-area road-6"></div>
 
