--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a href="" class="dropdown-item">Teorijska obuka</a>
                     <a href="" class="dropdown-item">Teorijski ispit</a>
                     <a href="" class="dropdown-item">Praktična obuka</a>
-                    <a href="" class="dropdown-item">Praktični ispit/a>
+                    <a href="" class="dropdown-item">Praktični ispit</a>
                     <a href="" class="dropdown-item">Probna vozačka dozvola</a>
                 </div>
             </div>
@@ -178,7 +178,7 @@
           <div class="content-area">
               <h4>Teorijski ispit</h4>
               <div data-pm-slice="1 1 []" data-en-clipboard="true">Položen teorijski ispit važi godinu i po dana.</div>
-              <a href="#" class="cta-type-link text-dark" target="_self">Saznaj više o <span class="sub-color">teoriji</span><i class="bi bi-link-45deg"></i></a>       
+              <a href="#" class="cta-type-link text-dark" target="_self">Saznaj više o <span class="sub-color">ispitu</span><i class="bi bi-link-45deg"></i></a>       
                </div>
       </div>
       <div class="road-area road-3"></div>
@@ -200,7 +200,7 @@
         <div class="content-area">
             <h4> Praktični ispit</h4>
             <div data-pm-slice="1 1 []" data-en-clipboard="true">Ceo ispit se sastoji se iz poligonskih radnji i vožnje u saobraćaju.</div>
-            <a href="#" class="cta-type-link text-dark" target="_self">Saznaj više o <span class="sub-color">vožnji</span><i class="bi bi-link-45deg"></i></a>       </div>
+            <a href="#" class="cta-type-link text-dark" target="_self">Saznaj više o <span class="sub-color">ispitu</span><i class="bi bi-link-45deg"></i></a>       </div>
       </div>
       <div class="road-area road-5"></div>
       <div class="single-map-block card-6" data-aos="fade-right">
@@ -225,7 +225,7 @@
 
   <div class="bg-light">
     <div class="container py-5">
-      <div class="row">
+      <div class="row mapa">
           <div class="col-md-6 text" data-aos="fade-right">
             <h2 class="h1 francois-one-regular">Kako do nas?</h1>
               <p class="as-font-light">
