--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="collapse navbar-collapse text-center" id="navbarCollapse">
           <div class="navbar-nav ms-auto">
               <a href="index.html" class="nav-item nav-link active">Početna</a>
-              <a href="" class="nav-item nav-link">O nama</a>
+              <a href="o-nama.html" class="nav-item nav-link">O nama</a>
               <div class="nav-item dropdown dropdown-hover"> <!-- Dodata klasa dropdown-hover -->
                 <a href="#" class="nav-link">Kategorije <i class="bi bi-caret-down-fill"></i></a> <!-- Uklonjen data-bs-toggle atribut -->
                 <div class="dropdown-menu m-0">
@@ -231,9 +231,9 @@
               <p class="as-font-light">
                 Nalazimo se na Novom Beogradu, u ulici Bulevara Mihaila Pupina 165a, smešteni u zgradi Jugoagenta, na 2. spratu. Na istoj lokaciji, održavaju se teorijski časovi, kao i teorisjki ispiti za obe kategorije.
               </p>
-              <p>Praktičnu obuku sprovodimo na poligonu u ulici Arsenija Čarnojevića 58, koji se nalazi nedaleko od sportske dvorane Arena. Nakon poligona, usredsređujemo se na vožnju po različitim delovima grada, pri čemu biramo rute koji su karakteristični za sam praktični ispit. Cilj je da vam pružimo iskustvo vožnje u stvarnim uslovima kako biste se što bolje pripremili za polaganje ispita.
+              <p>Praktičnu obuku sprovodimo na poligonu u ulici Arsenija Čarnojevića 58, koji se nalazi nedaleko od sportske dvorane Arena. Nakon poligona, usredsređujemo se na vožnju po različitim delovima grada, pri čemu biramo rute koji su karakteristični za sam praktični ispit.
               </p>
-              <p>Do naše lokacije možete doći gradskim prevozom i to autobiusima broj: .... , a postoji i mogućnost parkiranja u okolini zgrade Jugoagenta.</p>
+              <p>Do naše lokacije možete doći gradskim prevozom i to autobusima broj: .... , a postoji i mogućnost parkiranja u okolini zgrade Jugoagenta.</p>
               <p><b>Bulevar Mihaila Pupina 165a
                 II sprat, kancelarija 27</b></p>
                   <hr class="style-two"/> 
@@ -253,7 +253,7 @@
             <div class="col-12 col-sm-8 col-lg-6">
                 <!-- Section Heading-->
                 <div class="section_heading text-center wow fadeInUp" data-wow-delay="0.2s">
-                    <h3>Često Postavljena <span class="sub-color">Pitanja</span></h3>
+                    <h3>Često postavljena <span class="sub-color">pitanja</span></h3>
                     <p>Ovde možete pronaći odgovore na svoja pitanja</p>
                     <div class="line"></div>
                 </div>
