--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
   <div class="bg-light">
     <div class="container py-5">
-      <div class="row mapa">
+      <div id="map" class="row mapa">
           <div class="col-md-6 text" data-aos="fade-right">
             <h2 class="h1 francois-one-regular">Kako do nas?</h1>
               <p class="as-font-light">
