--- a/o-nama.html
+++ b/o-nama.html
@@ -98,14 +98,14 @@
     <div class="bg-light">
         <div class="container py-5">
             <div class="row mapa o-nama">
-                <div class="col-md-6 image text-center">
+                <div class="col-md-6 image text-center" data-aos="fade-right">
                     <img src="assets/img/audi1.png" alt="Slika" class="img-fluid w-80">
                 </div>
-                <div class="col-md-6 text" data-aos="fade-right">
+                <div class="col-md-6 text">
                 <h2 class="h1 francois-one-regular">O nama</h1>
-                    <p><span class="sub-color fw-bold">Auto škola BIZ</span> je nedavno osnovana sa željom da pruži kvalitetnu uslugu obuke vozača za kategorije A i B. <b>Naša misija</b> je da svaki naš polaznik postane deo bezbedne i odgovorne vozačke zajednice, osnažujući ih znanjem, veštinama i samopouzdanjem za bezbedno učešće u <b>saobraćaju</b>, a sa ciljem da postanemo sinonim za kvalitetnu <b>vozačku obuku</b>, prepoznatljivi po inovativnom pristupu, stručnosti instruktora i visokom nivou zadovoljnih polaznika.</p>
+                    <p><span class="sub-color fw-bold">Auto škola BIZ</span> je nedavno osnovana sa željom da pruži kvalitetnu uslugu obuke vozača za kategorije A i B. Naša misija je da svaki naš polaznik postane deo bezbedne i odgovorne vozačke zajednice, osnažujući ih znanjem, veštinama i samopouzdanjem za bezbedno učešće u saobraćaju, a sa ciljem da postanemo sinonim za kvalitetnu vozačku obuku, prepoznatljivi po inovativnom pristupu, stručnosti instruktora i visokom nivou zadovoljnih polaznika.</p>
     
-                    <p><b>Nalazimo se na Novom Beogradu</b>, <a href="index.html#map" class="sub-color">u ulici Bulevara Mihaila Pupina 165a, u zgradi Jugoagenta, na 2. spratu.</a> Tu smo da bismo omogućili što bolje savladavanje ispitnih zadataka i pripremu za vožnju u stvarnim uslovima. Sa druge strane, početnu praktičnu obuku realizujemo na poznatom poligonu u ulici Arsenija Čarnojevića 58, blizu sportske dvorane Arena, dok za dalju obuku biramo različite rute u gradu, fokusirajući se na one rute koje se javljaju na samom praktičnom ispitu.</p>
+                    <p>Nalazimo se na Novom Beogradu, <b><a href="index.html#map" class="text-dark">u ulici Bulevara Mihaila Pupina 165a, u zgradi Jugoagenta, na 2. spratu.</a></b> Tu smo da bismo omogućili što bolje savladavanje ispitnih zadataka i pripremu za vožnju u stvarnim uslovima. Sa druge strane, početnu praktičnu obuku realizujemo na poznatom poligonu u ulici Arsenija Čarnojevića 58, blizu sportske dvorane Arena, dok za dalju obuku biramo različite rute u gradu, fokusirajući se na one rute koje se javljaju na samom praktičnom ispitu.</p>
         
                     <hr class="style-two"/> 
                 </div>
@@ -115,7 +115,7 @@
 
     <div class="w-100 bg-dark p-3 text-center"> 
         <h2 class="text-light">Upiši se već <span class="sub-color">danas!</span></h2>
-        <a href="" class="button-6 mt-3">UPIŠI SE</a>
+        <a href="" class="button-6 mt-3">ONLINE UPIS</a>
         <p class="text-light mt-3"><i class="bi bi-telephone text-light"></i> +381 65 48 000 48</p>
     </div>
 
