--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <div class="nav-item dropdown dropdown-hover"> <!-- Dodata klasa dropdown-hover -->
                 <a href="#" class="nav-link">Cenovnik <i class="bi bi-caret-down-fill"></i></a> <!-- Uklonjen data-bs-toggle atribut -->
                 <div class="dropdown-menu m-0">
-                    <a href="" class="dropdown-item">A kategorija</a>
-                    <a href="" class="dropdown-item">B kategorija</a>
+                    <a href="a-kategorija.html" class="dropdown-item">A kategorija</a>
+                    <a href="b-kategorija.html" class="dropdown-item">B kategorija</a>
                 </div>
             </div>
               <a href="" class="nav-item nav-link">Vozni park</a>
