--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -118,14 +118,24 @@
                   </div>
                 </div>
                 <div class="col-sm-6 p-2">
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">B KATEGORIJA AKCIJA</h5>
-                      <p class="card-text">Uslov: Kandi</p>
-                      <a href="" class="button-6 button-5 mt-4 text-light">PRIJAVI SE</a>
+                    <div class="card card-sign">
+                      <div class="card-body">
+                        <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">B</span> KATEGORIJA</b></h5></div>
+                        <p class="card-text text-center"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
+                        <p class="text-center h3"><b>81.000,00 RSD</b></p>
+                        <p><b>Teorija: </b>1.000,00 RSD</p>
+                        <p><b>Teorijski ispit: </b>1.000,00 RSD</p>
+                        <p><b>Vožnja: </b>1.000,00 RSD</p>
+                        <p><b>Praktični ispit: </b>1.000,00 RSD</p>
+                        <p><b>Lekarsko uverenje: </b>1.000,00 RSD</p>
+                        <p><b>Prva pomoć: </b>1.000,00 RSD</p>
+                        <hr>
+                        <div class="w-100 text-center">
+                          <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
               </div>
         </div>
     </div>
