--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -104,14 +104,14 @@
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">B</span> KATEGORIJA</b></h5></div>
                       <p class="card-text text-center"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
                       <hr>
-                      <p class="text-center h3"><b>81.000,00 RSD</b></p>
+                      <p class="text-center h3"><b>91.000,00 RSD</b></p>
                       <hr>
-                      <p><b>Teorija: </b>1.000,00 RSD</p>
+                      <p><b>Teorijska obuka: </b>1.000,00 RSD</p>
+                      <p><b>Praktična obuka: </b>1.000,00 RSD</p>
                       <p><b>Teorijski ispit: </b>1.000,00 RSD</p>
-                      <p><b>Vožnja: </b>1.000,00 RSD</p>
                       <p><b>Praktični ispit: </b>1.000,00 RSD</p>
-                      <p><b>Lekarsko uverenje: </b>1.000,00 RSD</p>
                       <p><b>Prva pomoć: </b>1.000,00 RSD</p>
+                      <p><b>Lekarski pregled: </b>1.000,00 RSD</p>
                       <hr>
                       <div class="w-100 text-center">
                         <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
@@ -127,12 +127,12 @@
                         <hr>
                         <p class="text-center h3"><b>81.000,00 RSD</b></p>
                         <hr>
-                        <p><b>Teorija: </b>1.000,00 RSD</p>
+                        <p><b>Teorijska obuka: </b>1.000,00 RSD</p>
+                        <p><b>Praktična obuka: </b>1.000,00 RSD</p>
                         <p><b>Teorijski ispit: </b>1.000,00 RSD</p>
-                        <p><b>Vožnja: </b>1.000,00 RSD</p>
                         <p><b>Praktični ispit: </b>1.000,00 RSD</p>
-                        <p><b>Lekarsko uverenje: </b>1.000,00 RSD</p>
                         <p><b>Prva pomoć: </b>1.000,00 RSD</p>
+                        <p><b>Lekarski pregled: </b>1.000,00 RSD</p>
                         <hr>
                         <div class="w-100 text-center">
                           <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
