--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -94,7 +94,7 @@
     </nav>
     <!-- Navbar End -->
 
-    <div class="bg-light p-5">
+    <div class="bg-light mt-5 mb-5">
         <div class="container">
             <h2 class="h1 francois-one-regular">CENOVNIK - B Kategorija</h2>
             <div class="row">
