--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -138,7 +138,7 @@
                           <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
                         </div>
                       </div>
-                      <div class="akcija bg-dark p-2"><p class="sub-color"><span id="demo"></span></p></div>
+                      <div class="akcija bg-dark p-2"><p class="sub-color mb-1"><span id="demo"></span></p></div>
                     </div>
                   </div>
               </div>
