--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -123,7 +123,7 @@
                     <div class="card card-sign">
                       <div class="card-body">
                         <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">B</span> KATEGORIJA <span class="sub-color">AKCIJA</span></b></h5></div>
-                        <p class="card-text text-center"><b>Uslov:</b> Akcija za prve polaznike do kraja aprila</p>
+                        <p class="card-text text-center"><b>Uslov:</b> Akcija za prve polaznike traje još <b><span id="demo" class="sub-color"></span></b></p>
                         <hr>
                         <p class="text-center h3 text-success"><b>81.000,00 RSD</b></p>
                         <hr>
@@ -138,7 +138,6 @@
                           <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
                         </div>
                       </div>
-                      <div class="akcija bg-dark p-2"><p class="sub-color mb-1"><span id="demo"></span></p></div>
                     </div>
                   </div>
               </div>
