--- a/b-kategorija-cenovnik.html
+++ b/b-kategorija-cenovnik.html
@@ -60,10 +60,10 @@
                 <a href="index.html" class="nav-item nav-link">Početna</a>
                 <a href="o-nama.html" class="nav-item nav-link">O nama</a>
                 <div class="nav-item dropdown dropdown-hover"> <!-- Dodata klasa dropdown-hover -->
-                  <a href="#" class="nav-link active">Kategorije <i class="bi bi-caret-down-fill"></i></a> <!-- Uklonjen data-bs-toggle atribut -->
+                  <a href="#" class="nav-link">Kategorije <i class="bi bi-caret-down-fill"></i></a> <!-- Uklonjen data-bs-toggle atribut -->
                   <div class="dropdown-menu m-0">
-                      <a href="" class="dropdown-item">A kategorija</a>
-                      <a href="" class="dropdown-item">B kategorija</a>
+                      <a href="a-kategorija.html" class="dropdown-item">A kategorija</a>
+                      <a href="b-kategorija.html" class="dropdown-item">B kategorija</a>
                   </div>
               </div>
               
@@ -80,7 +80,7 @@
               </div>
               
               <div class="nav-item dropdown dropdown-hover"> <!-- Dodata klasa dropdown-hover -->
-                  <a href="#" class="nav-link">Cenovnik <i class="bi bi-caret-down-fill"></i></a> <!-- Uklonjen data-bs-toggle atribut -->
+                  <a href="#" class="nav-link active">Cenovnik <i class="bi bi-caret-down-fill"></i></a> <!-- Uklonjen data-bs-toggle atribut -->
                   <div class="dropdown-menu m-0">
                       <a href="a-kategorija-cenovnik.html" class="dropdown-item">A kategorija</a>
                       <a href="b-kategorija-cenovnik.html" class="dropdown-item">B kategorija</a>
@@ -96,33 +96,51 @@
 
     <div class="bg-light mt-5 mb-5">
         <div class="container">
-            <h2 class="h1 francois-one-regular">B Kategorija</h2>
+            <h2 class="h1 francois-one-regular">CENOVNIK - B Kategorija</h2>
             <div class="row">
-                <p>Uslovi za upisivanje i polaganje B kategorije:</p>
-                <p>Kandidat može da se upiše u auto školu ukoliko ima minimum 16 godina</p>
-                <p>Za polaganje praktičnog dela ispita i dobijanje vozačke dozvole neophodno da kandidat ima napunjenih 17 godina.</p>
-                <p>Kandidat poseduje važeću ličnu kartu.</p>
-                <p>Ukoliko je lice maloletano, potrebno je da na upis dođe sa jednim od roditelja/staratelja radi potpisivanja zakonskog ugovora.</p>
-                <p>Za polaganje teorijskog i praktičnog testa kandidat ne sme imati izostanke, već mora imati prisustvo na svim časovima teorijske i praktične obuke.</p>
-                <p>Za prijavu praktičnog ispita, kandidat mora da poseduje lekarsko uverenje i uverenje o položenom ispitu iz prve pomoći (?)</p>
-                <p>Kako izgleda obuka?</p>
-                <p>Obuka kandidata bez iskustva počinje teorisjkom nastavom u trajanju od 40 časova i kandidat može slušati maksimalno 3 časa teorijske obuke dnevno, pri čemu je trajanje jednog časa 45 minuta. Okvirno vreme završetka teorisjke obuke jeste dve i po nedelje i kandidat mora biti prisutan na svim časovima teorijske nastave.</p>
-                <p>Nakon završetka teorisjke nastave, kandidat se prijavljuje za polaganje teorisjkog ispita. Teorijski deo ispita je u vidu testa na računarima. Da bi kandidat položio test, potrebno je da ima 85% tačnih odgovora, odnosno 85 i više poena od ukupnih 100.</p>
-                <p>Nakon položenog teorisjkog dela potrebno je da kandidat izvadi lekarsko uverenjem koje mu naša auto škola obezbeđuje gratis.</p>
-                <p>Zatim usleđuje praktična obuka u trajanju od 40 časova,  gde je kandidatu dozvoljeno da ima maksimalno dva časa vožnje dnevno.</p> 
-                <p>Nakon završene praktične obuke, kandidat se prijavljuje za polaganje praktičnog dela ispita.</p>
-                <p>Na praktičnom ispitu se nalazi ispitna komisija koju čine dva ispitivača, jedan je ispitivač MUP-a, a drugi je ispitivač iz auto skole, koji ocenjuju da li je kandidat ispunio sve uslove za polaganje ispita, kako na pologonu, tako i u gradskoj vožnji. Potrebno je da kandidat dobije ocenu POLOŽIO od oba lica kako bi se smatralo da je položio ispit, u suprotnom kandidat po pravilniku dobija konačnu ocenu NIJE POLOŽIO.</p>
-                <p>Dobijanje probne vozačke dozvole:</p>
-                <p>Kandidati koji su ispunili uslov da sa 17 godina izađu na praktični ispit, nakon položenog vozačkog ispita dobijaju probnu vozačku dozvolu do navršene 21. godine života.</p>
-                <p>U slučaju kandidata koji su položili vozački ispit sa navršenih 19 godina života, dobijaju probnu vozačka dozvola u trajanju od 2 godine.</p>
-                <p>Privremena vozačka dozvola i ograničenja:</p>
-                <p>Vozač sa probnom vozačkom dozvolom B kategorije nema dozvolu da vozi vozilo od 23:00 do 06:00 sati.</p>
-                <p>Zabranjena je upotreba mobilnih telefona i drugih uređaja za komunikaciju tokom vožnje automobila.</p>
-                <p>Osoba koja vozi sa probnom vozačkom dozvolom ne sme biti pod uticajem alkohola.</p>
-                <p>Postoji ograničenje brzine vožnje i to na autoputu na 110 km/h, na regionalnim putevima brzina vožnje ne sme preći 90 km/h, dok na svim ostalim putevima, vozač sa probnom dozvolom ne sme voziti brže od 90% maksimalne dozvoljene brzine na tom delu puta.</p>
-                <p>Vozač koji je dobio probnu dozvolu sa navršenih 17 godina ne sme upravljati vozilom B kategorije čija snaga motora prelazi 80 kW bez nadzora osobe koja poseduje važeću vozačku dozvolu za B kategoriju duže od pet godina.</p>
-                <p>Privremena vozačka dozvola ne omogućava upis u druge kategorije.</p>
-            </div>
+                <div class="col-sm-6 p-2">
+                  <div class="card card-sign">
+                    <div class="card-body">
+                      <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">B</span> KATEGORIJA</b></h5></div>
+                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
+                      <hr>
+                      <p class="text-center h3"><b>91.000,00 RSD</b></p>
+                      <hr>
+                      <p><b>Teorijska obuka: </b>17.000,00 RSD</p>
+                      <p><b>Teorijski ispit: </b>4.000,00 RSD</p>
+                      <p><b>Praktična obuka: </b>62.000,00 RSD</p>
+                      <p><b>Praktični ispit: </b>4.000,00 RSD</p>
+                      <p><b>Prva pomoć: </b>4.000,00 RSD</p>
+                      <p><b>Lekarski pregled: </b>GRATIS</p>
+                      <hr>
+                      <div class="w-100 text-center">
+                        <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-6 p-2">
+                    <div class="card card-sign">
+                      <div class="card-body">
+                        <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">B</span> KATEGORIJA <span class="sub-color">AKCIJA</span></b></h5></div>
+                        <p class="card-text text-center" id="demo"></p>
+                        <hr>
+                        <p class="text-center h3 text-success"><b>81.000,00 RSD</b></p>
+                        <hr>
+                        <p><b>Teorijska obuka: </b>17.000,00 RSD</p>
+                        <p><b>Teorijski ispit: </b>4.000,00 RSD</p>
+                        <p><b>Praktična obuka: </b>52.000,00 RSD</p>
+                        <p><b>Praktični ispit: </b>4.000,00 RSD</p>
+                        <p><b>Prva pomoć: </b>4.000,00 RSD</p>
+                        <p><b>Lekarski pregled: </b>GRATIS</p>
+                        <hr>
+                        <div class="w-100 text-center">
+                          <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
         </div>
     </div>
 
